crates/plotnik-lib/tests/02-parser/recovery_validation/multiple_unnamed_defs_all_but_last.txt
(first)
(second)
(third)
------------------ DIAGNOSTICS -------------------
error: definition must be named
 --> query.ptk:1:1
  |
1 | (first)
  | ^^^^^^^
  |
help: give it a name like `Name = (first)`

error: definition must be named
 --> query.ptk:2:1
  |
2 | (second)
  | ^^^^^^^^
  |
help: give it a name like `Name = (second)`

error: definition must be named
 --> query.ptk:3:1
  |
3 | (third)
  | ^^^^^^^
  |
help: give it a name like `Name = (third)`
